fixed catalog display, home page image slider too big, needs fixing

--- a/public/main.css
+++ b/public/main.css
@@ -17,9 +17,13 @@ body {
 }
 
 .slider {
-  height: 400px !important;
+  height: 450px;
 }
 
 .slides {
-  height: 700px !important;
+  height: 450px;
+}
+
+.catalog {
+  font-size: 1.2em;
 }
